# pea-server

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  peaserver.code-workspace  registry_config.json
.cargo/: config.toml
.github/workflows/: cargo-test.yaml  client-test.yaml  nightly.yaml
choreo/: .gitignore  Ballerina.toml  Dependencies.toml  main.bal
choreo/tests/: endpoint_test.bal
client/: .eslintrc.cjs  App.tsx  package-lock.json  package.json
client/Components/: AllFiles.tsx  PdfFiles.tsx  SearchBar.tsx  TagSelector.tsx
client/Components/ImageFiles/: ImageFiles.tsx  (+1 more)
client/tests/: AllFiles.test.tsx  TagSelector.test.tsx  VideoFiles.test.tsx  dummy.test.ts
client/utils/: apiSlice.ts  fileFiltering.ts  searchSlice.ts  services.tsx  slideShowSlice.ts  store.ts  styles.ts  tagSlice.ts
legacy-client/src/: App.js  images.js  navbar.js
mobile-client/: App.tsx  package-lock.json  package.json  services.tsx
mobile-client/Components/: AllFiles.tsx  ImageFiles.tsx  OtherFiles.tsx  PdfFiles.tsx  TagSelector.tsx  VideoFiles.tsx
mobile-client/utils/: apiSlice.ts  componentSlice.ts  services.tsx  slideShowSlice.ts  states.tsx  store.ts  styles.tsx  videoSlice.ts
pea-client/: README.md  package-lock.json  package.json
pea-client/public/: index.html
pea-client/src/: App.css  App.js  MainPage.js  OtherFilePage.js  UploadPage.js  VideoPage.js  config.json  images.js  index.css  navbar.js
server/: Cargo.toml
server/.cargo/: config.toml
src/: lib.rs  main.rs  server.rs
src/utils/: log.rs  mod.rs  registry.rs  storage.rs  test.rs
(+12 files in other folders)
