[package]
name = "pea-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-cors = "0.6.4"
tokio = {version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
local-ip-address = "0.5.1"
crossterm = "0.25.0"
actix-multipart = "0.5.0"
futures-util = "0.3.25"
log = "0.4.17"
simple_logger = "4.0.0"

[build-dependencies]
local-ip-address = "0.5.1"
